# cuds

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  config.h++  cuda_compact.cu  cuda_compact.h++  ground.c++  ground.cu  helper.h++  item.c++  item.h++  list.c++  list.cu  list.h++  main.c++  main.cc  main.cu  match.c++  match.cu  pyproject.toml  rule.c++  rule.cu  rule.h++  setup.py  string.c++  string.cu  string.h++  term.c++  term.cu  term.h++  test_cpu.c++  test_gpu.cu  utility.c++  utility.cu  utility.h++  variable.c++  variable.cu  variable.h++
examples/: main.cc  main.js  main.py
include/: cuda_compact.h++  helper.h++  item.h++  item.hh  list.hh  rule.hh  string.hh  term.h++  term.hh  utility.hh  variable.hh
include/ds/: config.hh  item.hh  list.hh  rule.hh  string.hh  term.hh  utility.hh  variable.hh
jsds/: .gitignore  ds.cc  jsds.mjs
pyds/: __init__.py  buffer_size.py  common.py  ds.cc  item_t.py  list_t.py  main.cc  rule_t.py  string_t.py  term_t.py  variable_t.py  version.py
src/: ground.cc  item.cc  item.cu  list.cc  match.cc  match.cu  rule.cc  rule.cu  string.cc  term.cc  term.cu  utility.cc  utility.cu  variable.cc
tests/: test_item.cc  test_variable.cc
