[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools_scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pyds"
dynamic = ["version"]
dependencies = []
requires-python = ">=3"
authors = [{ email = "hzhangxyz@outlook.com", name = "Hao Zhang" }]
description = "A deductive system"
readme = "README.md"
license = "GPL-3.0-or-later"

[tool.setuptools_scm]
version_file = "pyds/_version.py"
version_scheme = "no-guess-dev"
fallback_version = "0.0.0"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
build.verbose = true